# Copyright (c) 2016 Politecnico di Milano. All rights reserved.
# 
# Additional copyrights may follow
# 
# $HEADER$
#

#if ORTE_ENABLE_MIGRATION

dist_ompidata_DATA += base/help-mig-base.txt

headers += \
        base/base.h

libmca_mig_la_SOURCES += \
        base/mig_base_select.c \
        base/mig_base_frame.c \
	base/mig_base.c

libmca_mig_la_LIBADD = -ltar

#endif
